--- a/Projeto Final/Makefile
+++ b/Projeto Final/Makefile
@@ -9,15 +9,20 @@ LIB		:= lib
 LIBRARIES	:=
 EXECUTABLE	:= main
 
+EXECUTABLE2	:= mainTests
+
 
 all: $(BIN)/$(EXECUTABLE)
 
 run: clean all
 	clear
 	./$(BIN)/$(EXECUTABLE)
+	./$(BIN)/$(EXECUTABLE2)
 
 $(BIN)/$(EXECUTABLE): $(SRC)/*.cpp
 	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) -L$(LIB) $^ -o $@ $(LIBRARIES)
 
+$(BIN)/$(EXECUTABLE2): $(SRC)/*.cpp
+	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) -L$(LIB) $^ -o $@ $(LIBRARIES)
 clean:
 	-rm $(BIN)/*
