Makefile corrigido e organização da modularização

--- a/Projeto Final/Makefile
+++ b/Projeto Final/Makefile
@@ -3,6 +3,7 @@ CXX_FLAGS := -Wall -Wextra -std=c++17 -ggdb
 
 BIN		:= bin
 SRC		:= src
+TESTS   := tests
 INCLUDE	:= include
 LIB		:= lib
 
@@ -11,18 +12,22 @@ EXECUTABLE	:= main
 
 EXECUTABLE2	:= mainTests
 
+run: clean all
+	clear
+	./$(BIN)/$(EXECUTABLE2)
+	./$(BIN)/$(EXECUTABLE)
+
+all: $(BIN)/$(EXECUTABLE2)
+
+
+$(BIN)/$(EXECUTABLE2): $(TESTS)/*.cpp $(SRC)/modulos/*.cpp
+	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) -L$(LIB) $^ -o $@ $(LIBRARIES)
+
 
 all: $(BIN)/$(EXECUTABLE)
 
-run: clean all
-	clear
-	./$(BIN)/$(EXECUTABLE)
-	./$(BIN)/$(EXECUTABLE2)
-
-$(BIN)/$(EXECUTABLE): $(SRC)/*.cpp
+$(BIN)/$(EXECUTABLE): $(SRC)/$(EXECUTABLE).cpp $(SRC)/modulos/*.cpp
 	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) -L$(LIB) $^ -o $@ $(LIBRARIES)
 
-$(BIN)/$(EXECUTABLE2): $(SRC)/*.cpp
-	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) -L$(LIB) $^ -o $@ $(LIBRARIES)
 clean:
 	-rm $(BIN)/*
